# onnxruntime

./: .gitignore
cmake/: onnxruntime_framework.cmake
docs/api/c/: functions_a.html  functions_c.html  functions_e.html  functions_func.html  functions_func_c.html  functions_func_e.html  functions_func_g.html  functions_func_l.html  functions_func_s.html  functions_func_u.html  functions_g.html  functions_l.html  functions_r.html  functions_s.html  functions_u.html  functions_vars.html  group___global.html  group___global.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  navtreeindex3.js  navtreeindex4.js  onnxruntime__c__api_8h_source.html  onnxruntime__cxx__api_8h_source.html  struct_ort_1_1_model_metadata-members.html  struct_ort_1_1_model_metadata.html  struct_ort_1_1_session-members.html  struct_ort_1_1_session.html  struct_ort_1_1_session.js  struct_ort_1_1_session_options-members.html  struct_ort_1_1_session_options.html  struct_ort_1_1_session_options.js  struct_ort_api-members.html  struct_ort_api.html  struct_ort_api.js  struct_ort_open_v_i_n_o_provider_options.html
docs/api/c/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_3.js  all_5.js  all_7.js  all_e.js  functions_0.js  functions_10.js  functions_2.js  functions_4.js  functions_6.js  functions_e.js  typedefs_2.js
docs/api/python/: api_summary.html  searchindex.js  tutorial.html
docs/api/python/auto_examples/: index.html  plot_backend.html  plot_common_errors.html  plot_convert_pipeline_vectorizer.html  plot_load_and_predict.html  plot_pipeline.html  plot_profiling.html  plot_train_convert_predict.html  sg_execution_times.html
onnxruntime/core/framework/: cuda_energy_profiler.cc  cuda_energy_profiler.h  sequential_executor.cc
test/: CMakeLists.txt  analyze_ort.cpp  collect_gemm_kernel_infos.py  count_torchvision_flops.py  cuda_energy_profiler.cc  export_timm_onnx.py  export_torchvision_onnx.py  extract_node_data.py  generate_gemm_config_from_reference.py  generate_onnx_conv_kernel.py  generate_onnx_gemm_kernel.py  get_ort_optimized_model.py  isolate_onnx_nodes.py  merge_profile_nodes.py  merge_run_logs.py  plot_node_data.py  run_onnx_models.py  run_ort.cpp  test_thread_pool.cpp  timm_model_list.txt
test/cuda_energy_profiler/backup/: cuda_energy_profiler.cc
test/cuda_energy_profiler/with_ctpl/: cuda_energy_profiler.cc  cuda_energy_profiler.h
test/cuda_energy_profiler/with_thread_pool/: cuda_energy_profiler.cc  cuda_energy_profiler.h
test/kernel_predictor_pipeline/: conv_kernel_predictor.py  onnx_kernel_constructor.py  onnx_kernel_sampler.py  onnx_model_runner.py  utils.py
test/onnx_conv_analysis/: collect_conv_kernel_infos.py  generate_conv_config_from_reference.py  generate_onnx_conv_kernel.py  merge_conv_kernel_run_logs.py  predictor_conv.ipynb  sampling_conv.py  visualization.ipynb
test/onnx_gemm_analysis/: generate_gemm_config_from_reference.py  merge_gemm_kernel_run_logs.py  predictor_gemm.ipynb
test/run_onnx_models/: CMakeLists.txt  extract_node_data.py  merge_run_logs.py  run_onnx_models.py  run_onnx_models_clean.py
test/run_onnx_models/cuda_energy_profiler/: CMakeLists.txt
test/run_onnx_models/cuda_energy_profiler/no_thread_pool/: cuda_energy_profiler.cc  cuda_energy_profiler.h
test/run_onnx_models/cuda_energy_profiler/with_ctpl_thread_pool/: cuda_energy_profiler.cc  cuda_energy_profiler.h
test/run_onnx_models/src/: run_ort_clean.cpp  run_with_profiler.cpp
(+12 files in other folders)
